progrès sur la config

--- a/frontend/connect_form.html
+++ b/frontend/connect_form.html
@@ -1,4 +1,4 @@
-<form id="connect_form" method="get">
+<form id="connect_form" action="backend/connexion.php" method="get">
     <h5>Login:</h5>
     <input class="form-control" id="Login_form" type="text" placeholder="Enter Login..."/>
     <br>
